style(Blog): Trying some things to fix the size problems on mobile

--- a/_sass/_blog-global.scss
+++ b/_sass/_blog-global.scss
@@ -26,8 +26,8 @@ h6 {
 }
 
 h1 {
-  font-size: 6rem;
-  line-height: 5.5rem;
+  font-size: 5.5em;
+  line-height: 5rem;
 }
 
 h2 {
